style.css
body{
  margin: 0px;
  overflow: hidden;
  background-color:#111111;
  height: 100%;
  width: 100%;
  position: fixed;
}

#globalContainer, canvas {
    -webkit-user-select: none;
    user-select: none;
    -webkit-touch-callout: none;
    touch-action: none;
}

#audio-file{
  display: none;
}

.buttonArray{
  position: absolute;
  width: 100%;
  bottom: 2%;
}

.buttonContainer{
  border: 0px;
  position: relative;
  float: left;
  width: calc(100% / 5);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.button {
  display: inline-block;
  margin: auto;
  width: 50px;
  height: 50px;
  line-height: 50px;
  border-radius: 50%;
  border: 0em;
  background-color: #ff5e89;
  color: #EEEEEE;
  cursor: pointer;
  text-align: center;
}

.button img{
  padding-top: 11px;
}

.buttonLabel{
  padding-bottom: 6px;
  margin: auto;
  font-family:helvetica;
  font-weight: bold;
  font-size: 16px;
  color:#ff5e89;
  z-index: 1;
}

.instructionLabel{
  padding: 5px;
  width: 60%;
  position:absolute;
  text-align: center;
  font-family:helvetica;
  font-weight: bold;
  font-size: 14px;
  bottom: 110%;
  display:none;
  color: #FFFFFF;
  background-color: #ff5e89;
}

@media screen and (max-width: 1000px) {
  #sliderArray {
    position: absolute;
    width: 100%;
    top: calc(100vw / 14);
  }

  .sliderContainer{
    border: 0px;
    transform: rotate(-90deg);
    position: relative;
    margin: auto;
    float: left;
    width: calc(100vw / 7);
  }

  .slider {
    margin: auto;
    -webkit-appearance: none;
    width: 110%;
    border-radius: 15px;
    background: #AAEEFF;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    z-index: 1;
    overflow: visible;
  }
}

@media screen and (min-width: 1000px) {
  #sliderArray {
    position: absolute;
    width: 100%;
    top: 2%;
    left: 10px;
  }

  .sliderContainer{
    border: 0px;
    position: relative;
    margin: auto;
    float: left;
    width: calc(100vw / 7);
  }

  .slider {
    margin: auto;
    -webkit-appearance: none;
    width: 90%;
    border-radius: 15px;
    background: #AAEEFF;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    z-index: 1;
    overflow: visible;
  }
}



.slider:hover {
  opacity: 1;
}

.slider::-webkit-slider-thumb {
  appearance: none;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: #ff5e89;
  border-color: #ff5e89;
  outline: none;
  cursor: pointer;
  z-index: 1;
  box-shadow: none;
}

.slider::-moz-range-thumb {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: #ff5e89;
  border-color: #ff5e89;
  outline: none;
  cursor: pointer;
  z-index: 1;
}

.sliderLabel{
  display: inline-block;
  white-space: nowrap;
  position: relative;
  left: 5px;
  margin: auto;
  font-family: helvetica;
  font-weight: bold;
  font-size: 14px;
  color:#00CCFF;
}

